# timetracker

./: CHANGELOG.md  README.md  justfile  pyproject.toml
src/timetracker/: commands.py  display.py  enums.py  error_utils.py  help.json  main.py  models.py  parsers.py  settings.json  settings.py  settings.txt  time_utils.py  timetracker.db
tests/: conftest.py  edit_test.py  fixture.db  project_test.py  task_test.py  unused_tag_test.py
