[project]
name = "timetracker"
version = "0.3.0"
description = "A simple terminal app to keep track of what you spend your time on."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "id_doesnt_matter"}]
maintainers = [{name = "id_doesnt_matter"}]
dependencies = [
    "freezegun==1.2.2",
	"peewee==3.16.2",
 	"pydantic==2.0",
	"rich==13.4.1",
	"textual==0.27.0",
    "typer==0.9.0",
    "tzdata==2023.3"
]

[project.urls]
repository = "https://github.com/it-doesnt-matter/timetracker.git"

[project.scripts]
timet = "timetracker.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

select = ["ALL"]

ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "D",  # pydocstyle
    "DTZ001",  # The use of `datetime.datetime()` without `tzinfo` argument is not allowed
    "DTZ003",  # The use of `datetime.datetime.utcnow()` is not allowed, use `datetime.datetime.now(tz=)` instead
    "DTZ005",  # The use of `datetime.datetime.now()` without `tz` argument is not allowed
    "T201",  # `print` found
    "UP007",  # Use `X | Y` for type annotations
    "COM812", # Trailing comma missing
    "FBT001",  # Boolean positional arg in function definition
    "FBT003",  # Boolean positional value in function call
    "RET",  # flake8-return
    "TD002",  # Invalid TODO capitalization: `todo` should be `TODO`
    "TD003",  # Missing author in TODO; try: `# TODO(<author_name>): ...`
    "TD006",  # Missing issue link on the line following this TODO
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

target-version = "py311"

[tool.ruff.per-file-ignores]
"src/timetracker/commands.py" = [
    "C901",  # `recap` is too complex
    "PLR0912",  # Too many branches
    "TRY301",  # Abstract `raise` to an inner function
    "FBT002",  # Boolean default value in function definition
    "PLR0913",  # Too many arguments to function call
]
"src/timetracker/settings.py" = [
	"N805",  # First argument of a method should be named `self`
]
"src/timetracker/display.py" = [
	"C901",  # `compose` is too complex
	"PLR0912",  # Too many branches
]
"src/timetracker/parsers.py" = [
    "C901",  # `parse_date_range` is too complex (12 > 10)
    "PLR0912",  # Too many branches (16 > 12)
    "PLR2004",  # Magic value used in comparison, consider replacing ... with a constant variable
]
"src/timetracker/time_utils.py" = [
	"PLR2004",  # Magic value used in comparison
]
"tests/*.py" = [
    "S101",  # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison, consider replacing it with a constant variable
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.isort]
line_length = 99
profile = "black"

[tool.black]
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["db_type"]

[tool.pyright]
venvPath = "."
venv = "venv"